AWS/Lesson-6/ECS/terraform/vpc.tf
resource "aws_vpc" "technion_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "technion_vpc"
  }
}
