AWS/Lesson-6/ECS/terraform/route-tables.tf
resource "aws_route_table" "public-rt" {
	vpc_id = aws_vpc.technion_vpc.id
	route {
		cidr_block = "0.0.0.0/0"
		gateway_id = aws_internet_gateway.igw.id
	}
	tags = {
		Name = "public-rt"
	}
}

resource "aws_route_table" "public-rt-2" {
	vpc_id = aws_vpc.technion_vpc.id
	route {
		cidr_block = "0.0.0.0/0"
		gateway_id = aws_internet_gateway.igw.id
	}
	tags = {
		Name = "public-rt-2"
	}
}

resource "aws_route_table" "private-rt" {
	vpc_id = aws_vpc.technion_vpc.id
	route {
		cidr_block = "0.0.0.0/0"
		nat_gateway_id = aws_nat_gateway.nat-gw.id
	}
	tags = {
		Name = "private-rt"
	}
}

resource "aws_route_table" "private-rt-2" {
	vpc_id = aws_vpc.technion_vpc.id
	route {
		cidr_block = "0.0.0.0/0"
		nat_gateway_id = aws_nat_gateway.nat-gw.id
	}
	tags = {
		Name = "private-rt-2"
	}
}

resource "aws_route_table_association" "public-rt-association-1" {
	subnet_id = aws_subnet.public-subnet-1.id
	route_table_id = aws_route_table.public-rt.id
}

resource "aws_route_table_association" "public-rt-association-2" {
	subnet_id = aws_subnet.public-subnet-2.id
	route_table_id = aws_route_table.public-rt-2.id
}

resource "aws_route_table_association" "private-rt-association-1" {	
	subnet_id = aws_subnet.private-subnet-1.id
	route_table_id = aws_route_table.private-rt.id
}

resource "aws_route_table_association" "private-rt-association-2" {	
	subnet_id = aws_subnet.private-subnet-2.id
	route_table_id = aws_route_table.private-rt-2.id
}
